--- a/index.css/index.css
+++ b/index.css/index.css
@@ -7,3 +7,33 @@ body{
 ul{
     list-style: none;
 }
+a{
+    text-decoration: none;
+}
+section{
+    width:100%;
+    height: 95vh;
+    background-image:url("https://files.123freevectors.com/wp-content/original/148341-grey-and-white-wavy-background.jpg");
+    background-repeat: no-repeat;
+    background-size:cover;
+    position:relative;
+}
+nav{
+    display:flex;
+    justify-content: space-between;
+    align-items:center;
+    height:60px;
+    background-color:#FFFFFF;
+    box-shadow:2px 2px 12px rgba(0,0,0,0.2);
+    padding:0px 5%;
+}
+nav ul{
+    display:flex;
+}
+nav ul li a{
+    margin:30px;
+    font-family: Verdana;
+    color: #505050;
+    font-size:15px;
+    font-weight:700;
+}
