--- a/css/index.css
+++ b/css/index.css
@@ -37,3 +37,143 @@ nav ul li a{
     font-size:15px;
     font-weight:700;
 }
+.logo{
+    font-family:Vivaldi;
+    color:#000000;
+    font-size:22 px;
+
+}
+.active{
+    font-weight: bold;
+    color:#2d2a2a;
+}
+.text-container p:nth-child(1){
+    font-family: Calibri;
+    font-weight: bold;
+    color:#6d6d6d;
+    font-size:22px;
+}
+.text-container p:nth-child(2){
+    font-family:Calibri;
+    font-weight: bold;
+    color:#1a1a1a;
+    font-size:40px;
+
+}
+text-container p:nth-child(3){
+    font-family:Verdana;
+    color:#403e3e;
+    font-size:20px;
+    line-height: 30px;
+
+}
+.text-container p{
+    line-height: 0px;
+    margin:45px 0px 25px;
+}
+.text-container{
+    position: absolute;
+    left:16%;
+    top:35%;
+    transform: translate(-16%,-35%);
+}
+.text-container button{
+    width:130px;
+    height:42px;
+    border-radius:10px;
+    font-family:calibri;
+    font-weight: bold;
+    font-size: 14px;
+    outline: none;
+    margin:0px 10px;
+}
+.hire-btn{
+    border:2px solid #373636;
+    color:#000000;
+    width:130px;
+    height:42px;
+    text-align: center;
+    border-radius:10px;
+    font-family:calibri;
+    font-weight: bold;
+    font-size: 14px;
+    outline: none;
+    padding:10px;
+    margin:0px 10px;
+    background: #ffffff;
+}
+.down-cv{
+    background-color:#0b0b0b;
+    color:#FFFFFF;
+    border:none;
+    width:130px;
+    height:42px;
+    border-radius:10px;
+    font-family:calibri;
+    font-weight: bold;
+    font-size: 14px;
+    outline: none;
+    margin:0px 10px;
+    padding:10px;
+
+}
+button:active{
+    transform: scale(1.1);
+}
+.model{
+    height:560px;
+    position: absolute;
+    bottom:10px;
+    left:70%;
+    transform:translate(-70%);
+}
+.about-container{
+    width:80%;
+    height:330px;
+    background-color:#FFFFFF;
+    border-radius:20px;
+    box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
+    display:flex;
+    padding:20px;
+    margin:-7% auto 20px auto;
+    position: relative;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.text-container img{
+    height:200px;
+}
+.about-text{
+    width:550px;
+}
+.about-text p:nth-child(1){
+    color:#403e3e;
+    font-family:Calibri;
+    font-weight:bold;
+    font-size:23px;
+    line-height: 0px;
+}
+.about-text p:nth-child(2){
+    color:#3e3d3d;
+    font-size:13px;
+    font-family: Calibri;
+    font-weight:bold;
+    line-height: 5px;
+}
+.about-text p:nth-child(3),
+.about-text p:nth-child(4){
+    
+    font-family:Calibri;
+    
+    font-size:16px;
+
+}
+.about-text button{
+    width:120px;
+    height:40px;
+    color:#FFFFFF;
+    outline:none;
+    border:none;
+    font-family:Verdana;
+    background-color:#262525;
+}
