--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@ nav{
     justify-content: space-between;
     align-items:center;
     height:60px;
-    background-color:white;
+    background-color:#FFFFFF;
     box-shadow:2px 2px 12px rgba(0,0,0,0.2);
     padding:0px 5%;
 }
@@ -57,7 +57,7 @@ nav ul li a{
     font-family:Calibri;
     font-weight: bold;
     color:#1a1a1a;
-    font-size:40px;
+    font-size:30px;
 
 }
 .text-container p:nth-child(3){
@@ -87,7 +87,7 @@ nav ul li a{
     outline: none;
     margin:0px 10px;
 }
-.hire-btn{
+.aboutdiv{
     border:2px solid #373636;
     color:#000000;
     width:130px;
@@ -102,7 +102,7 @@ nav ul li a{
     margin:0px 10px;
     background: #ffffff;
 }
-.down-cv{
+.mproject{
     background-color:#0b0b0b;
     color:#FFFFFF;
     border:none;
@@ -120,8 +120,8 @@ nav ul li a{
 button:active{
     transform: scale(1.1);
 }
-.vector{
-    height:540px;
+.woman{
+    height:520px;
     position: absolute;
     bottom:10px;
     left:70%;
@@ -130,7 +130,7 @@ button:active{
 .about-container{
     width:80%;
     height:330px;
-    background-color:white;
+    background-color:#FFFFFF;
     border-radius:20px;
     box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
     display:flex;
@@ -168,12 +168,96 @@ button:active{
     font-size:16px;
 
 }
-.about-text button{
-    width:120px;
-    height:40px;
+.aboutme{
+    border:2px solid #373636;
+    color:#ffffff;
+    width:130px;
+    height:42px;
+    text-align: center;
+    border-radius:10px;
+    font-family:calibri;
+    font-weight: bold;
+    font-size: 14px;
+    outline: none;
+    padding:5px;
+    margin:0px 10px;
+    background: #000000;
+}
+.mypro{
+    background-color:#0b0b0b;
     color:#FFFFFF;
-    outline:none;
     border:none;
-    font-family:Verdana;
-    background-color:#262525;
+    width:130px;
+    height:42px;
+    border-radius:10px;
+    font-family:calibri;
+    font-weight: bold;
+    font-size: 14px;
+    outline: none;
+    margin:0px 10px;
+    padding:5px;
+
+}
+.services{
+    height:600px;
+    background-color:#FFFFFF;
+    padding:2% 10% 0px 10%;
+}
+.titlepro{
+    font-weight:bold;
+    text-align: center;
+    font-size:30px;
+    font-family:caribli;
+}
+.pic{
+    margin-top:-30px;
+}
+.services-text{
+  
+    display: flex;
+}
+.box-1, .box-2{
+    width:600px;
+    height:320px;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
+    box-shadow:2px 2px 12px rgba(0,0,0,0.3);
+}
+.box-container{
+    display:flex;
+  
+    
+    justify-content: space-between;
+}
+.box-2 p:nth-child(1){
+    font-family:calibri;
+    font-weight:bold;
+    color: #ffffff;
+    text-align: center;
+    background-color: black;
+    width: 200px;;
+
+}
+.box-1 p:nth-child(1)
+{
+    font-family:calibri;
+    font-size:23px;
+   font-weight:bold;
+   text-align: center;
+   justify-content: center;
+}
+.box-1 p:nth-child(2),
+.box-1 p:nth-child(3){
+    font-family:calibri;
+    font-family:23px;
+   text-align: center;
+   width:480px;
+   padding:10px;
+   text-align: justify;
+   
+}
+.box-2 img{
+    height:320px;
+    width:520px;
 }
