--- a/css/index.css
+++ b/css/index.css
@@ -261,3 +261,15 @@ button:active{
     height:320px;
     width:520px;
 }
+.contact-me{
+    width:100%;
+    height:280px;
+    background-image:url("https://i.postimg.cc/7ZBNVqJv/ohgray.png");
+    background-size:cover;
+    background-repeat: no-repeat;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top:10%;
+}
