--- a/css/index.css
+++ b/css/index.css
@@ -324,3 +324,49 @@ footer p:nth-child(2){
 .social-icons{
     display: flex;
 }
+.copyright{
+    color:#565555;
+    font-size:13px;
+    position:absolute;
+    left:50%;
+    bottom: 10px;
+    transform: translateX(-50%);
+}
+.social-icons i{
+    color:#000000;
+}
+.social-icons a:hover,
+.social-b a:hover{
+    background-color:#000000;
+    box-shadow:2px 2px 12px rgba(0,0,0,0.2);
+    transition:all ease 0.5s;
+}
+.social-icons a:hover i,
+.social-b a:hover i{
+    color:#FFFFFF;
+    transition:all ease 0.5s;
+
+}
+.social-b{
+    position: fixed;
+    top:50%;
+    right:0px;
+    transform: translateY(-50%);
+}
+.social-b a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:50px;
+    height:50px;
+    padding:0px;
+    margin:0px;
+    line-height: 0px;
+    background-color:#ffffff;
+    border: 1px solid #cbcbcb;
+    box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
+}
+.social-b i{
+    color:#2b2b2b;
+    font-size:20px;
+}
